fix: step cards title wrap on less then 414px

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -508,6 +508,7 @@
 
   .card__title {
     margin-block-end: 1vw;
+    text-align: center;
   }
 
   .card__img {
